--- a/package.json
+++ b/package.json
@@ -3,21 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.27.2",
-    "bootstrap": "^5.1.3",
-    "date-fns": "^2.29.3",
-    "jwt-decode": "^3.1.2",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.2.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0",
-    "react-to-print": "^2.14.11",
-    "react-toastify": "^9.1.1",
-    "web-vitals": "^2.1.4"
+    "cra-template": "1.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
